# WireDeck

./: .gitignore  README.md  build.zig  build.zig.zon
OBS/: CMakeLists.txt  README.md
OBS/cmake/: FindSIMDe.cmake
OBS/src/wiredeck_obs_output_source/: CMakeLists.txt  plugin-main.cpp
OBS/src/wiredeck_obs_output_source/include/: wiredeck_obs_output_protocol.h
docs/: internal_bus_routing_tasks.md
scripts/: build-obs.sh  build.sh  build_vendor_lv2.sh  check_system_deps.sh  fetch_vendor_deps.sh  install-obs.sh  install_system_deps_ubuntu.sh  obs-plugin-common.sh  package-obs.sh  package_deb.sh
src/: build_options.zig  client_main.zig  lv2_ui_host_main.zig  main.zig  root.zig
src/app/: app.zig  state_store.zig
src/core/: binder.zig  icon_resolver.zig  output_exposure.zig  pipewire.zig  pulse.zig
src/native/: imgui_bridge.cpp  imgui_bridge.h  imgui_bridge.zig
src/persistence/: config.zig
tools/rnnoise_retrainer/: README.md  export.sh  finetune-supervised.sh  finetune.sh  pyproject.toml  requirements.txt  train-supervised-common.sh  train-supervised-from-scratch.sh  train.sh
tools/rnnoise_retrainer/docs/: gpu_runtime_plan.md
tools/rnnoise_retrainer/scripts/: generate_cuda_kernels.py  generate_input_projection_ptx.py  train_model_sweep.py
tools/rnnoise_retrainer/src/wiredeck_rnnoise_retrainer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/rnnoise_retrainer/src/wiredeck_rnnoise_trainer/: audio_corpus.py  cli.py  gpu_export.py  gpu_infer.py  gpu_model.py  gpu_train.py  gpu_train_supervised.py  noise_datasets.py
(+70 files in other folders)
