[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wiredeck-rnnoise-retrainer"
version = "0.1.0"
description = "Standalone RNNoise retraining and binary export pipeline for WireDeck"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "torch>=2.2",
  "tqdm>=4.66",
]

[project.scripts]
wiredeck-rnnoise = "wiredeck_rnnoise_trainer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

